# communicator_bridge

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
Canais/: apps.py  interface.py  models.py  serializers.py  urls.py  views.py
Canais/migrations/: 0001_initial.py  0002_canal_ativo.py
core/: settings.py  urls.py  views.py
docs/: GEMINI.md  como_rodar_com_docker.md  gerenciamento_de_permissoes.md  implementacao_serializer_usuario.md  minhas_ideias.md
mensagens/: models.py  serializers.py  urls.py  views.py
mensagens/migrations/: 0001_initial.py
telegram_integracao/: apps.py  serializers.py  services.py  urls.py  views.py
usuarios/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
usuarios/management/commands/: populate_users.py
usuarios/migrations/: 0001_initial.py  0002_usuario_tipo_usuario.py  0003_usuario_telefone.py
